test/cases/compile_errors/multiline_string_with_trailing_whitespace.zig
const S =
    \\Hello, world    
; //              ^^^^^ trailing whitespace here
// error
// backend=stage2
// target=native
//
// :2:5: error: multiline string cannot contain trailing whitespace
